--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #303030;
+  background-image: url("./assets/pexels-felix.jpg");
   color: #FFFFFF;
 }
 
